Updated dashboard and main layout

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -28,6 +28,11 @@
         function confirmDelete(){
             return confirm('Are you sure you want to delete this storybook?');
         }
+    </script>  
+    <script>
+    function confirmDelete() {
+        return confirm('Are you sure you want to delete this storybook?');
+    }
     </script>
 </body>
 </html>
