--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -22,7 +22,7 @@
                     <i class="fas fa-edit"></i>
                 </a>
 
-                <form action="/stories/{{_id}}" method="POST" id="delete-form">
+                <form action="/stories/{{_id}}" method="POST" id="delete-form" onsubmit="return confirmDelete()">
                     <input type="hidden" name="_method" value="DELETE">
                     <button type="submit" class="btn red">
                         <i class="fas fa-trash"></i>
